# shader_practice

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
glsl/: bottom_clamp.frag  cellular.frag  circle.frag  classic_perlin_animated.frag  magma.frag  move_circle.frag  polygon.frag  rect.frag  simple_noise.frag  simple_noise_2d.frag  sin_time.frag  test.frag  time_demo.frag  vertical_displacement.frag
src/: lib.rs  main.rs
src/shaders/: mod.rs
src/shaders/blend/: blend.frag  frag.rs  main.rs  vert.rs
src/shaders/candy/: candy.frag  candy.vert  frag.rs  main.rs
src/shaders/fire/: fire.frag  fire.vert  main.rs
src/shaders/normal/: frag.rs  main.rs  normal.frag  normal.vert  vert.rs
src/shaders/spawn/: frag.rs  main.rs  spawn.frag
src/shaders/time/: main.rs  time.frag
src/shaders/uv/: frag.rs  frag_didnt_work.rs  main.rs  mod.rs  uv.frag  uv.vert  vert_didnt_work.rs
