[package]
name = "shader_practice"
version = "0.1.0"
authors = ["Anselmo Sampietro <ans.samp@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.5.0"

[[example]]
name = "blend"
path = "src/shaders/blend/main.rs"

[[example]]
name = "candy"
path = "src/shaders/candy/main.rs"

[[example]]
name = "fire"
path = "src/shaders/fire/main.rs"

[[example]]
name = "normal"
path = "src/shaders/normal/main.rs"

[[example]]
name = "spawn"
path = "src/shaders/spawn/main.rs"

[[example]]
name = "time"
path = "src/shaders/time/main.rs"

[[example]]
name = "uv"
path = "src/shaders/uv/main.rs"
